src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/ARBCopyImage_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/ARBCopyImage_StringErrorContext.class */
public final class ARBCopyImage_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glCopyImageSubData(IIIIIIIIIIIIIII)V", "net/labymod/core/laby3d/opengl/error/generated/ARBCopyImageErrorContext");
        return methods;
    }
}
